2010-02-16  Yusuke Sato  <yusukes@chromium.org>

Reviewed by Dimitri Glazkov.

        [Chromium] OpenType font with CFF glyphs is not handled correctly on Windows XP
        https://bugs.webkit.org/show_bug.cgi?id=34735

        * fast/css/font-face-opentype.html: Added.
        * fast/css/resources/Ahem.otf: Added. Ahem font which has CFF glyphs, converted from Ahem.ttf by FontForge (http://fontforge.sourceforge.net/).
        * platform/mac/fast/css/font-face-opentype-expected.checksum: Added.
        * platform/mac/fast/css/font-face-opentype-expected.png: Added.
        * platform/mac/fast/css/font-face-opentype-expected.txt: Added.
2010-02-16  Yusuke Sato  <yusukes@chromium.org>

        Reviewed by Dimitri Glazkov.

        [Chromium] OpenType font with CFF glyphs is not handled correctly on Windows XP
        https://bugs.webkit.org/show_bug.cgi?id=34735

        Use 0xFFFF as invalidGlyph when fontData is a OpenType font with CFF glyphs.

        Test: fast/css/font-face-opentype.html

        * platform/graphics/chromium/GlyphPageTreeNodeChromiumWin.cpp:
        (WebCore::fillBMPGlyphs):

Canonical link: https://commits.webkit.org/46162@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@54855 268f45cc-cd09-0410-ab3c-d52691b4dbfc